--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,10 +16,10 @@ http {
 
   // public IP address or domain name if avaliable.
   // Need this so this system can serve assets such as images.
-  addr.public = ""
+  // addr.public = ""
   addr.public = ${?MARS_PUBLIC_ADDR}
 
-  port = 80
+  // port = 80
   port = ${?MARS_PORT}
 }
 
@@ -29,19 +29,19 @@ db {
 
   // If the DB and this system are not running on the same machine, replace
   // localhost inside the url with IP addr or domain name where the DB is running on.
-  url = "jdbc:postgresql://localhost:5432/postgres"
+  // url = "jdbc:postgresql://localhost:5432/postgres"
   url = ${?MARS_DB_URL}
 
   // DB username
-  user = ""
+  // user = ""
   user = ${?MARS_DB_USER}
 
   // DB password
-  password = ""
+  // password = ""
   password = ${?MARS_DB_PASSWORD}
 
   // only support "org.postgresql.Driver" or "org.h2.Driver"
-  driver = "org.postgresql.Driver"
+  // driver = "org.postgresql.Driver"
   driver = ${?MARS_DB_DRIVER}
 
   keepAliveConnection = true
@@ -52,7 +52,7 @@ db {
 
 email {
   // The email address this system will use to email notifications and time sheets.
-  addr = ""
+  // addr = ""
   addr = ${?MARS_EMAIL_ADDR}
 
   // The host that will send the email.
@@ -62,19 +62,19 @@ email {
   //
   // google ex: smtp.gmail.com
   // Amazon SES ex: email-smtp.us-west-2.amazonaws.com
-  host = "email-smtp.us-west-2.amazonaws.com"
+  // host = "email-smtp.us-west-2.amazonaws.com"
   host = ${?MARS_EMAIL_HOST}
-  port = 587
+  // port = 587
   port = ${?MARS_EMAIL_PORT}
 
   // If using google as host, this field will be the same as the 'addr' field above.
   // For amazon SES, see http://docs.aws.amazon.com/ses/latest/DeveloperGuide/smtp-credentials.html.
-  SMTP-user = ""
+  // SMTP-user = ""
   SMTP-user = ${?MARS_EMAIL_SMTP_USER}
 
   // If using google as host, this is the password of the email addr.
   // For amazon SES, see http://docs.aws.amazon.com/ses/latest/DeveloperGuide/smtp-credentials.html.
-  SMTP-password = ""
+  // SMTP-password = ""
   SMTP-password = ${?MARS_EMAIL_SMTP_PASSWORD}
 }
 
@@ -83,19 +83,19 @@ service {
   registerUUID {
     // The Time To Live for registered UUIDs. In other words, how long
     // before they will expire. Used in QR code generator.
-    ttl-in-sec = 30
+    // ttl-in-sec = 30
     ttl-in-sec = ${?MARS_REG_UUID_TTL_SEC}
   }
 
   timesheet {
     // Path to the directory where the system will save the generated timesheets.
-    dir = "./timesheets"
+    // dir = "./timesheets"
     dir = ${?MARS_TIMESHEET_DIR}
   }
 
   face-recognition {
     // Path to the directory where face images will be saved and fetched.
-    dir = "./faces"
+    // dir = "./faces"
     dir = ${?MARS_FACES_DIR}
   }
 }
@@ -104,9 +104,9 @@ service {
 // This requires signing up and getting an api key and secret.
 // 50,000 api calls per month. More details at http://www.faceplusplus.com/apilimit/
 facepp {
-  key = ""
+  // key = ""
   key = ${?MARS_FACEPP_KEY}
-  secret = ""
+  // secret = ""
   secret = ${?MARS_FACEPP_SECRET}
 }
 
